--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@ body {
   width: 25.4%;
   margin: 0% 2% 0% 2%;
   height: 100%;
-  background-image: url(Assets/CharactersPipBoy/Joe_pipboy.png);
+  background-image: url("");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -429,8 +429,7 @@ body {
 
 .characterpipboytag h2{
   position: relative;
-  top: 10%;
-  left: 20%;
+  left: 13%;
   font-size: 20px;
 }
 
@@ -591,6 +590,21 @@ body {
 /*////////////////*/
 /*/////Loading////*/
 /*////////////////*/
+
+#devices {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background-image: url("./Assets/Loading/2devices.png");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: 1s;
+}
+
 #loading {
   position: absolute;
   left: 50%;
@@ -617,6 +631,7 @@ body {
 }
 
 #loading2 {
+  opacity: 0;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -639,6 +654,7 @@ body {
   font-size: 30px;
   transition: .5s;
   text-shadow: 0 0 10px #fff;
+  opacity: 0;
 }
 
 /*////////////////*/
